# starknet-replay

./: .gitignore  Cargo.toml  LICENSE  README.md  dependencies.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml
cairo_replay/: Cargo.toml
cairo_replay/src/: lib.rs
cairo_replay/src/error/: database.rs  database_error.rs  histogram.rs  mod.rs  runner.rs  runner_error.rs
cairo_replay/src/pathfinder_db/: mod.rs
cairo_replay/src/profiler/: mod.rs
cairo_replay/src/runner/: analysis.rs  histogram.rs  mod.rs  pathfinder_db.rs  replace_ids.rs  replay_block.rs  replay_range.rs  replay_statistics.rs
cli/: Cargo.toml
cli/src/: args.rs  main.rs  utils.rs
src/: main.rs
starknet-replay/: Cargo.toml  Makefile
starknet-replay/src/: lib.rs
starknet-replay/src/block_number/: mod.rs
starknet-replay/src/block_number/pathfinder/: mod.rs
starknet-replay/src/common/: block_number.rs  contract_class.rs  mod.rs  storage.rs
starknet-replay/src/contract_address/: mod.rs
starknet-replay/src/error/: database.rs  histogram.rs  mod.rs  permanent_state.rs  profiler.rs  rpc_client.rs  runner.rs
starknet-replay/src/histogram/: mod.rs  plot.rs
starknet-replay/src/papyrus_storage/: block_number.rs  contract_class.rs  mod.rs
starknet-replay/src/pathfinder_storage/: block_number.rs  mod.rs
starknet-replay/src/profiler/: analysis.rs  mod.rs  replace_ids.rs  replay_statistics.rs  report.rs
starknet-replay/src/runner/: analysis.rs  histogram.rs  mod.rs  pathfinder_db.rs  replace_ids.rs  replay_block.rs  replay_class_hash.rs  replay_range.rs  replay_state_reader.rs  replay_statistics.rs  report.rs  visited_pcs.rs
starknet-replay/src/storage/: mod.rs
starknet-replay/src/storage/pathfinder/: mod.rs
starknet-replay/src/storage/rpc/: class_info.rs  contract_class.rs  mod.rs  permanent_state.rs  receipt.rs  receipt_api.rs  rpc_client.rs  transaction.rs  visited_pcs.rs
starknet-replay/src/storage/rpc/state/: mod.rs  permanent_state.rs  receipt.rs  replay_state_reader.rs  rpc_client.rs  transaction.rs
starknet-replay/src/transaction_trace/: mod.rs
starknet-replay/test_data/: sierra_add_contract.cairo  sierra_add_contract.json  sierra_add_program.cairo  sierra_add_program.json  sierra_dict.cairo  sierra_dict.json  sierra_felt.json  sierra_program.json  sierra_program_replaced_id.json  sierra_secp.cairo  sierra_secp_contract.cairo  test_contract_class_at_block.json  test_issue_54.out  test_process_visited_pcs.json  test_replay_blocks.out
starknet-replay/tests/: test_class_definition_at_block.rs  test_contract_class_at_block.rs  test_issue_54.rs  test_replay_blocks.rs
tests/: check_class_definition_at_block.rs
