[workspace]
resolver = "2"

members = [
    "cli",
    "starknet-replay"
]

[workspace.package]
# Edition 2021 is chosen to support async.
edition = "2021"
# If this version is changed, amend the version set in `build.yml` and `rust-toolchain.toml`.
rust-version = "1.81.0"
license = "Apache-2.0"
repository = "https://github.com/reilabs/starknet-replay"
keywords = ["cairo", "starknet"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.75"
tracing = "0.1.37"
itertools = { version = "0.12.1", default-features = false }
