[package]
name = "cairo-replay"
description = "Back end to replay Starknet transactions and print histogram of libfuncs usage."
categories = ["cryptography::cryptocurrencies"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
plotters = { git = "https://github.com/plotters-rs/plotters.git", rev = "9b05119c36d586822e32871436f6c2c5e869d99a" } #"0.3.5"
anyhow.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-sierra-generator.workspace = true
jemallocator.workspace = true
pathfinder-common.workspace = true
pathfinder-executor.workspace = true
pathfinder-rpc.workspace = true
pathfinder-storage.workspace = true
rayon.workspace = true
starknet_api.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
smol_str.workspace = true
itertools.workspace = true
