[package]
name = "cairo-replay"
version = "0.1.0"
description = "Back end to replay Starknet transactions and print histogram of libfuncs usage."
categories = ["cryptography::cryptocurrencies"]
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# Prevent publishing by accident.
publish = false

[dependencies]
# All `cairo-lang-` crates must have the same version
cairo-lang-starknet-classes = "2.6.0"
cairo-lang-sierra-to-casm = "2.6.0"
cairo-lang-runner = "2.6.0"
cairo-lang-compiler = "2.6.0"
cairo-lang-sierra = "2.6.0"
cairo-lang-utils = "2.6.0"
cairo-lang-sierra-generator = "2.6.0"
# Hardcoding the commit hash until the changes to pathfinder are merged in the main branch of `eqlabs/pathfinder`
pathfinder-common =  { git = "https://github.com/reilabs/pathfinder.git", rev = "82a749e6c0c2b88e1242cad202004bea165dcbd6" }
pathfinder-executor =  { git = "https://github.com/reilabs/pathfinder.git", rev = "82a749e6c0c2b88e1242cad202004bea165dcbd6" }
pathfinder-rpc =  { git = "https://github.com/reilabs/pathfinder.git", rev = "82a749e6c0c2b88e1242cad202004bea165dcbd6" }
pathfinder-storage =  { git = "https://github.com/reilabs/pathfinder.git", rev = "82a749e6c0c2b88e1242cad202004bea165dcbd6" }
rayon = "1.8.0"
starknet_api = "0.10.0"
serde = "1.0.192"
serde_json = "1.0.105"
smol_str = { version = "0.2.0", features = ["serde"] }
thiserror = "1.0.61"
anyhow.workspace = true
tracing.workspace = true
itertools.workspace = true
