[package]
name = "cli"
description = "A CLI tool to replay Starknet transactions and print histogram of libfuncs usage"
categories = ["cryptography::cryptocurrencies"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
cairo-replay = { path = "../cairo_replay" }
clap = { version = "4.5.3", features = ["derive"] }
jemallocator = "0.5.4"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "time",
    "ansi",
] }
anyhow.workspace = true
pathfinder-storage.workspace = true
rayon.workspace = true
tracing.workspace = true
itertools.workspace = true
