[package]
name = "cli"
version = "0.1.0"
description = "A CLI tool to replay Starknet transactions and print histogram of libfuncs usage"
categories = ["cryptography::cryptocurrencies"]
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# Prevent publishing by accident.
publish = false

[dependencies]
starknet-replay = { path = "../starknet-replay" }
clap = { version = "4.5.3", features = ["derive"] }
# The Cairo VM allocates felts on the stack, so during execution it's making
# a huge number of allocations. We get roughly two times better execution
# performance by using jemalloc (compared to the Linux glibc allocator).
# Disabled for other operating systems.
jemallocator-global = { version = "0.3.2", features = ["force_global_jemalloc"] }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "time",
    "ansi",
] }
exitcode = "1.1.2"
anyhow.workspace = true
tracing.workspace = true
itertools.workspace = true
