[package]
name = "cli"
version = "0.1.0"
description = "A CLI tool to replay Starknet transactions and print histogram of libfuncs usage"
categories = ["cryptography::cryptocurrencies"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# Prevent publishing by accident.
publish = false

[dependencies]
starknet-replay = { path = "../starknet-replay" }
clap = { version = "4.5.3", features = ["derive"] }
jemallocator = "0.5.4"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "time",
    "ansi",
] }
exitcode = "1.1.2"
url = "2.5.2"
anyhow.workspace = true
tracing.workspace = true
itertools.workspace = true
