[package]
name = "starknet-replay"
version = "0.1.0"
description = "Back end to replay Starknet transactions and print histogram of libfuncs usage."
categories = ["cryptography::cryptocurrencies"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

# Prevent publishing by accident.
publish = false

[dependencies]
# Ensure cairo-vm matches the version used by blockifier
cairo-vm = "1.0.0-rc5"
# All `cairo-lang-` crates must have the same version
cairo-lang-starknet-classes = "2.7.0-rc.1"
cairo-lang-sierra-to-casm = "2.7.0-rc.1"
cairo-lang-runner = "2.7.0-rc.1"
cairo-lang-compiler = "2.7.0-rc.1"
cairo-lang-sierra = "2.7.0-rc.1"
cairo-lang-utils = "2.7.0-rc.1"
cairo-lang-sierra-generator = "2.7.0-rc.1"
# Some changes are required to `starkware-libs/blockifier`. These changes are
# in the branch `extract_libfunc` of Reilabs' fork and need to be merged
# into the main branch.
# Hardcoding the commit hash for the time being.
blockifier =  { git = "https://github.com/reilabs/blockifier.git", rev = "e3141f67338cbb03595f24984b615042877229e0" }
# `plotters` is using the latest (as of 30-May-2024) commit on the branch
# `next-release-devel` because it contains the fix for bug #551 related to
# anchoring of labels when rotated. Issue #26.
plotters = { git = "https://github.com/plotters-rs/plotters.git", rev = "a7a3f8989af20931dd9e7e1f204d5254de3a8053" }
flate2 = "1.0.25"
rayon = "1.8.0"
# The versions of `starknet` dependencies must match the version used in blockifier.
starknet_api = "0.13.0-rc.0"
starknet-core = "0.11.0"
starknet-providers = "0.11.0"
serde = "1.0.192"
serde_json = "1.0.105"
thiserror = "1.0.61"
url = "2.5.2"
hex = "0.4.3"
once_cell = "1.17.1"
tokio = { version = "1.27.0", features = ["full"] }
primitive-types = "0.12.2"
anyhow.workspace = true
tracing.workspace = true
itertools.workspace = true

[dev-dependencies]
indoc = "2.0.5"
rand = "0.8.4"
rand_chacha = "0.3.1"
test-log = { version = "0.2.16", features = ["trace"] }
